# marray-xarray

./: .gitignore  .pre-commit-config.yaml  LICENSE  pixi.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
ci/requirements/: docs.yaml  environment.yaml
docs/: api.md  api.rst  conf.py  index.md
marray_xarray/: __init__.py  accessors.py  masking.py
