[project]
name = "marray-xarray"
requires-python = ">= 3.13"
license = { text = "Apache-2.0" }
dependencies = [
  "xarray>=2025.09.0",
  "marray>=0.0.12",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatchling-vcs"]
build-backend = "hatchling.build"

[tool.setuptools]
packages = ["marray_xarray"]

[tool.hatch]
version.source = "vcs"
[tool.hatch.build.targets.sdist]
only-include = ["marray_xarray"]

[tool.ruff]
builtins = ["ellipsis"]
exclude = [
  ".git",
  ".eggs",
  "build",
  "dist",
  "__pycache__",
  "docs",
]
target-version = "py313"

extend-include = ["*.ipynb"]
line-length = 100

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "I",   # isort
  "UP",  # Pyupgrade
  "TID", # tidy imports
]
ignore = [
  "E402", # E402: module level import not at top of file
  "E501", # E501: line too long - let black worry about that
  "E731", # E731: do not assign a lambda expression, use a def
]
fixable = ["I"]
extend-safe-fixes = [
  "TID252", # absolute imports
]


[tool.ruff.lint.isort]
known-first-party = ["marray_xarray"]
known-third-party = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.coverage.run]
source = ["marray_xarray"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]
